# codie-sidecar-build

./: .gitignore  README.md
.github/workflows/: build-sidecar-images.yml  mirror-thirdparty-images.yml
docker-registry/scripts/: _lib.sh  build-browser-mcp-docker.sh  build-home-mcp-docker.sh  build-media-mcp-docker.sh  build-memory-mcp-docker.sh  build-search-mcp-docker.sh
docker-registry/sidecars/browser-mcp/: Dockerfile  entrypoint.sh  proxy.py
docker-registry/sidecars/home-mcp/: Dockerfile  pyproject.toml  server.py  test_server.py
docker-registry/sidecars/media-mcp/: Dockerfile  pyproject.toml  server.py
docker-registry/sidecars/memory-mcp/: Dockerfile  pyproject.toml  server.py  test_server.py
docker-registry/sidecars/search-mcp/: Dockerfile  pyproject.toml  server.py  test_server.py
