[project]
name = "codie-search-mcp"
version = "0.1.0"
description = "Web search + page fetch exposed via MCP over HTTP."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
